# Doubts

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vis.py
.vim/: coc-settings.json
src/: bitoperation.cpp  eigen.cpp  eigen_spline.cpp  stl_container.cpp  stl_filesystem.cpp  stl_general.cpp  stl_math.cpp  stl_ptr.cpp  stl_string.cpp  stl_thread.cpp  stl_time.cpp  stl_transform.cpp  string.cpp
